isMainThread() assertions in CallbackMap are incorrectly failing on some iOS apps https://bugs.webkit.org/show_bug.cgi?id=173738 <rdar://problem/32923933>

Reviewed by Brady Eidson.

The assertions hit on certain iOS apps even though the crash traces clearly
show them on the main thread. We have verified locally that RunLoop::isMain()
propertly return true in this case (while WTF::isMainThread() returns false).
Update the assertions to use RunLoop::isMain() instead.

* UIProcess/GenericCallback.h:
(WebKit::CallbackMap::put):
(WebKit::CallbackMap::take):
(WebKit::CallbackMap::invalidate):

Canonical link: https://commits.webkit.org/190607@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@218724 268f45cc-cd09-0410-ab3c-d52691b4dbfc